Fix overflow on mainpage
The signature class was forcing the maximum height making the <p>
element overflowing the page. By removing this constraint, the overflow
is now gone.

--- a/static/common.css
+++ b/static/common.css
@@ -11,7 +11,7 @@ h1 {
     padding-top: 0;
     border-width: thin;
     clear: both;
-    height: 3.125rem;
+    min-height: 3.125rem;
     text-align: center;
 }
 
